# SoftRenderer

./: .gitignore  CMakeLists.txt
src/: Color.h  Image.cc  Image.h  Renderer.cc  Renderer.h  Surface.h  main.cc
